updated css rules to fix button spacings

--- a/runestone/common/css/runestone-custom-sphinx-bootstrap.css
+++ b/runestone/common/css/runestone-custom-sphinx-bootstrap.css
@@ -162,7 +162,7 @@ input[type="button"].btn.btn-sm {
 }
 
 .btn {
-    margin: 5px 0;
+    margin: 5px;
 }
 
 .btn.disabled {
